2024-09-26_generali_terraform/day4/kubernetes_app_with_vault_example/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      imagePullSecrets:
        - name: harbor-robot
      containers:
        - name: main
          # image: harbor.k8s.sikademo.com/bar/hello
          image: ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              memory: 40Mi
              cpu: 40m
