2024-09-26_generali_terraform/day4/kubernetes_app_with_vault_example/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 8000
