2024-09-26_generali_terraform/day4/kubernetes_app_with_vault_example/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bar.k8s.sikademo.com
      secretName: bar.k8s.sikademo.com-tls
  rules:
    - host: bar.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
